chore: update dependencies and add Clerk middleware
- Updated Next.js to version 15.3.3 and React to version 19.1.0.
- Added @clerk/nextjs for authentication and swr for data fetching.
- Introduced middleware for Clerk authentication with appropriate matcher configuration.

--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 # Public Environment Variables
 NEXT_PUBLIC_CURRENCY=$
-NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=''
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_dW5pcXVlLXN0YXJsaW5nLTc3LmNsZXJrLmFjY291bnRzLmRldiQ
 
 # Private Environment Variables
-CLERK_SECRET_KEY=''
+CLERK_SECRET_KEY=sk_test_XbzXWrgtFS7MY48REL80ggOE2ZY105UgaBqHkhFAiP
 MONGODB_URI=''
 INNGEST_SIGNING_KEY=''
 INNGEST_EVENT_KEY=''
