feat: add User model with schema definition and MongoDB connection

--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_dW5pcXVlLXN0YXJsaW5nLTc3LmNsZXJrLmFjY2
 
 # Private Environment Variables
 CLERK_SECRET_KEY=sk_test_XbzXWrgtFS7MY48REL80ggOE2ZY105UgaBqHkhFAiP
-MONGODB_URI=''
+MONGODB_URI='mongodb+srv://excellenceseigha:mX6frQmndGFOi37b@cluster0.1e0qs.mongodb.net/Jalika?retryWrites=true&w=majority&appName=Cluster0'
 INNGEST_SIGNING_KEY=''
 INNGEST_EVENT_KEY=''
 # Cloudinary
